--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     window.onload = () => {
         // Build a system
         const ui = SwaggerUIBundle({
-            url: "final-oas.yaml",
+            url: "payments.yaml",
             dom_id: '#swagger-ui',
             presets: [
                 SwaggerUIBundle.presets.apis,
